--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
-    "quasar": "^1.0.0"
+    "firebase": "^7.7.0",
+    "quasar": "^1.0.0",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0"
