--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "firebase": "^7.7.0",
+    "jspdf": "^1.5.3",
     "quasar": "^1.0.0",
     "vuex": "^3.1.2"
   },
