--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.2",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "firebase": "^7.7.0",
     "jspdf": "^1.5.3",
     "quasar": "^1.0.0",
+    "vue": "^2.6.11",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
