--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.1",
     "firebase": "^7.7.0",
     "jspdf": "^1.5.3",
+    "nodemailer": "^6.4.2",
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
     "vuex": "^3.1.2"
