--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^1.0.2",
+    "@firebase/app": "^0.5.4",
+    "@firebase/firestore": "^1.10.2",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "firebase": "^7.7.0",
@@ -19,6 +21,7 @@
     "nodemailer": "^6.4.2",
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-firestore": "^0.3.30",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
