--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
     "vue-firestore": "^0.3.30",
+    "vue-qrcode-reader": "^2.1.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
