--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@firebase/app": "^0.5.4",
     "@firebase/firestore": "^1.10.2",
     "@quasar/extras": "^1.0.0",
+    "apexcharts": "^3.15.6",
     "axios": "^0.18.1",
     "firebase": "^7.7.0",
     "jspdf": "^1.5.3",
     "nodemailer": "^6.4.2",
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.5.2",
     "vue-firestore": "^0.3.30",
     "vue-qrcode-reader": "^2.1.1",
     "vuex": "^3.1.2"
