--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jspdf": "^1.5.3",
     "nodemailer": "^6.4.2",
     "quasar": "^1.0.0",
+    "sweetalert2": "^9.8.2",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.5.2",
     "vue-firestore": "^0.3.30",
